Update resource configs

--- a/GameData/KerbalKommander/Resources/DF-Resources.cfg
+++ b/GameData/KerbalKommander/Resources/DF-Resources.cfg
@@ -1,40 +1,50 @@
 RESOURCE_DEFINITION
 {
 	name = Steel
+	displayName = Steel
 	density = 0.0078
-	unitCost = 2
 	hsp = 900
 	flowMode = ALL_VESSEL
 	transfer = PUMP
 	isTweakable = false
+	isVisible = true
+	unitCost = 10
+	volume = 1
 }
 RESOURCE_DEFINITION
 {
 	name = Diamond
+	displayName = Diamond
 	density = 0.0078
-	unitCost = 20
 	hsp = 1500
 	flowMode = ALL_VESSEL
 	transfer = PUMP
 	isTweakable = false
+	isVisible = true
+	unitCost = 20
+	volume = 1
 }
 RESOURCE_DEFINITION
 {
 	name = Wood
 	density = 0.001
-	unitCost = 5
 	hsp = 1200
 	flowMode = ALL_VESSEL
 	transfer = PUMP
 	isTweakable = false
+	isVisible = true
+	unitCost = 5
+	volume = 1
 }
 RESOURCE_DEFINITION
 {
 	name = Weapons
 	density = .0001
-	unitCost = 50
 	hsp = 900
 	flowMode = ALL_VESSEL
 	transfer = PUMP
 	isTweakable = false
+	isVisible = true
+	unitCost = 50
+	volume = 1
 }
